--- a/package.json
+++ b/package.json
@@ -13,5 +13,13 @@
     "pubsub"
   ],
   "author": "Gavin McDermott <gavinmcdermott@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "abstract-blob-store": "3.2.0",
+    "ipfs-bitswap": "0.6.0",
+    "libp2p-ipfs": "0.12.1",
+    "lodash": "4.15.0",
+    "peer-id": "0.7.0",
+    "peer-info": "0.7.0"
+  }
 }
