--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Testnet to spin up libp2p nodes for the purpose of testing pubsub implementations",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "keywords": [
     "js-ipfs",
@@ -20,6 +21,8 @@
     "libp2p-ipfs": "0.12.1",
     "lodash": "4.15.0",
     "peer-id": "0.7.0",
-    "peer-info": "0.7.0"
+    "peer-info": "0.7.0",
+    "ramda": "0.22.1",
+    "winston": "2.2.0"
   }
 }
