--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/network.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/network.js"
+    "start": "node src/index.js"
   },
   "keywords": [
     "js-ipfs",
@@ -21,12 +21,19 @@
     "ipfs-bitswap": "0.6.0",
     "ipfs-repo": "0.8.0",
     "libp2p-ipfs": "0.12.1",
+    "libp2p-mdns-discovery": "0.3.3",
     "libp2p-swarm": "0.22.3",
+    "libp2p-tcp": "0.7.4",
     "lodash": "4.15.0",
+    "memwatch-next": "0.3.0",
     "peer-id": "0.7.0",
     "peer-info": "0.7.0",
     "q": "1.4.1",
     "ramda": "0.22.1",
-    "winston": "2.2.0"
+    "winston": "2.2.0",
+    "yargs": "5.0.0"
+  },
+  "devDependencies": {
+    "chai": "3.5.0"
   }
 }
