--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "MIT",
   "dependencies": {
     "abstract-blob-store": "3.2.0",
+    "chalk": "1.1.3",
     "es6-promisify": "4.1.0",
     "ipfs-bitswap": "0.6.0",
     "ipfs-repo": "0.8.0",
@@ -30,7 +31,6 @@
     "peer-info": "0.7.0",
     "q": "1.4.1",
     "ramda": "0.22.1",
-    "winston": "2.2.0",
     "yargs": "5.0.0"
   },
   "devDependencies": {
