--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
     "abstract-blob-store": "3.2.0",
     "chalk": "1.1.3",
     "es6-promisify": "4.1.0",
-    "ipfs-bitswap": "0.6.0",
+    "ipfs-bitswap": "0.7.1",
     "ipfs-repo": "0.8.0",
-    "libp2p-ipfs": "0.12.1",
+    "js-libp2p-pstn-node": "1.0.3",
+    "libp2p-ipfs": "0.14.1",
     "libp2p-mdns-discovery": "0.3.3",
     "libp2p-swarm": "0.22.3",
     "libp2p-tcp": "0.7.4",
