--- a/package.json
+++ b/package.json
@@ -18,12 +18,13 @@
   "dependencies": {
     "abstract-blob-store": "3.2.0",
     "chalk": "1.1.3",
+    "debug": "2.2.0",
     "es6-promisify": "4.1.0",
     "ipfs-bitswap": "0.7.1",
     "ipfs-repo": "0.8.0",
     "libp2p-ipfs": "0.14.1",
     "libp2p-mdns-discovery": "0.3.3",
-    "libp2p-pstn-node": "1.0.0",
+    "libp2p-pstn-node": "1.0.5",
     "libp2p-swarm": "0.22.3",
     "libp2p-tcp": "0.7.4",
     "lodash": "4.15.0",
