--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
-  "name": "pubsub_testnet",
+  "name": "libp2p-pstn",
   "version": "1.0.0",
-  "description": "Testnet to spin up libp2p nodes for the purpose of testing pubsub implementations",
+  "description": "Benchmark utility for designing and testing new js-libp2p pubsub strategies",
   "main": "src/network.js",
   "scripts": {
+    "start": "DEBUG=pstn:logger* node example.js 2> logs/log.log",
+    "start:debug": "DEBUG=pstn:stats* node example.js",
     "test": "mocha -t 60000 test/**/*.spec.js",
-    "start": "node example.js"
+    "test:debug": "DEBUG=pstn:logger* mocha -t 60000 test/**/*.spec.js",
+    "test:log": "DEBUG=pstn:logger* mocha -t 60000 test/**/*.spec.js 2> logs/log.log"
   },
   "keywords": [
     "js-ipfs",
@@ -16,26 +19,30 @@
   "author": "Gavin McDermott <gavinmcdermott@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "abstract-blob-store": "3.2.0",
-    "chalk": "1.1.3",
     "debug": "2.2.0",
-    "es6-promisify": "4.1.0",
-    "ipfs-bitswap": "0.7.1",
-    "ipfs-repo": "0.8.0",
+    "libp2p-floodsub": "0.3.0",
     "libp2p-ipfs": "0.14.1",
-    "libp2p-mdns-discovery": "0.3.3",
-    "libp2p-pstn-node": "1.0.5",
-    "libp2p-swarm": "0.22.3",
-    "libp2p-tcp": "0.7.4",
-    "lodash": "4.15.0",
+    "libp2p-pstn-logger": "0.0.1",
+    "libp2p-pstn-stats": "0.0.4",
+    "libp2p-pstn-topo-ring": "0.0.3",
     "memwatch-next": "0.3.0",
+    "multiaddr": "2.0.3",
     "peer-id": "0.7.0",
-    "peer-info": "0.7.0",
-    "q": "1.4.1",
-    "ramda": "0.22.1",
-    "yargs": "5.0.0"
+    "peer-info": "0.7.1",
+    "ramda": "0.22.1"
   },
   "devDependencies": {
     "chai": "3.5.0"
-  }
+  },
+  "directories": {
+    "test": "test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/gavinmcdermott/js-libp2p-pstn.git"
+  },
+  "bugs": {
+    "url": "https://github.com/gavinmcdermott/js-libp2p-pstn/issues"
+  },
+  "homepage": "https://github.com/gavinmcdermott/js-libp2p-pstn#readme"
 }
