update README; add stats to Network

--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
   "scripts": {
     "start": "DEBUG=pstn:logger* node example.js 2> logs/log.log",
     "start:debug": "DEBUG=pstn:stats* node example.js",
-    "test": "mocha -t 60000 test/**/*.spec.js",
-    "test:debug": "DEBUG=pstn:logger* mocha -t 60000 test/**/*.spec.js",
-    "test:log": "DEBUG=pstn:logger* mocha -t 60000 test/**/*.spec.js 2> logs/log.log"
+    "test": "mocha -t 60000 test/**/*.spec.js"
   },
   "keywords": [
     "js-ipfs",
